--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,28 @@
+body {
+  background-color: lightpink;
+}
+h1,
+p {
+  text-align: center;
+}
 
+h1 {
+  color: magenta;
+}
+
+footer a {
+  margin: 0 10px;
+}
+footer {
+  display: block;
+  text-align: center;
+  color: purple;
+}
+
+img {
+  display: block;
+  width: 40%;
+  border-radius: 15px;
+  margin: auto;
+  padding: 10px;
+}
